fixed the alignment of the layout mvp complete

--- a/Project-II-Calculator/calculator/src/App.css
+++ b/Project-II-Calculator/calculator/src/App.css
@@ -11,5 +11,5 @@
 .calc {
   width: 240px;
   height: 390px;
-  border: 1px solid red;
+  border: 1px solid black;
 }
