--- a/Project-II-Calculator/calculator/src/components/DisplayComponents/Display.css
+++ b/Project-II-Calculator/calculator/src/components/DisplayComponents/Display.css
@@ -2,9 +2,11 @@
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  width: 240px;
-  height: 90px;
-  border: 1px solid blue;
+  background-color: black;
+  color: white;
+  width: 100%;
+  height: 22.6%;
+  border: 1px solid grey;
   font-size: 3rem;
   padding-right: 1.2rem;
   box-sizing: border-box;
